--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,10 @@
   justify-content: center;
   background: white;
   margin-top: 100px;
-  padding: 20px;
+  padding: 25px;
   max-width: fit-content;
   margin-left: auto;
   margin-right: auto;
   border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
