--- a/src/components/Steps.css
+++ b/src/components/Steps.css
@@ -23,8 +23,10 @@
   margin-right: 15px;
   background: transparent;
   color: white;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   cursor: pointer;
+  font-weight: 500;
+  width: 40px;
 }
 .steps {
   color: hsl(231, 11%, 63%);
