--- a/src/Pages/Select.css
+++ b/src/Pages/Select.css
@@ -68,12 +68,15 @@ input:checked + .slider:before {
   border: 1px solid hsl(229, 24%, 87%);
   background: transparent;
 }
+/* .billing-option button:hover {
+  border: 1px solid black;
+} */
 .billing-option {
   margin-top: 50px;
 }
 .select-header {
   margin-right: auto;
 }
-.highlight {
+.billing-option .highlight {
   border: 1px solid hsl(243, 100%, 62%);
 }
