--- a/src/Pages/Select.css
+++ b/src/Pages/Select.css
@@ -10,6 +10,13 @@
   width: 0;
   height: 0;
 }
+.plan-option {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  margin-top: 50px;
+}
+
 .slider {
   position: absolute;
   cursor: pointer;
