--- a/src/Pages/Select.css
+++ b/src/Pages/Select.css
@@ -24,7 +24,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-color: #2196f3;
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
