--- a/src/Pages/Personal.css
+++ b/src/Pages/Personal.css
@@ -5,7 +5,8 @@
   /* margin-top: 100px; */
 }
 .personal-content,
-.select-content {
+.select-content,
+.add-ons-content {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -14,7 +15,8 @@
   margin-bottom: 200px;
 }
 .personal-header,
-.select-header {
+.select-header,
+.add-ons-header {
   display: flex;
   flex-direction: column;
   max-width: 500px;
