--- a/src/Pages/AddOns.css
+++ b/src/Pages/AddOns.css
@@ -3,26 +3,34 @@
   align-items: center;
   justify-content: center;
 }
+
 .add-on-options {
   display: flex;
   align-items: center;
-  justify-content: center;
   flex-direction: column;
-  margin-top: 75px;
+  margin-top: 40px;
 }
 .add-on-option button {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   width: 500px;
-  border-radius: 5px;
-  padding: 10px;
+  border-radius: 6px;
+  padding: 15px;
   background: transparent;
+  border: 1px solid hsl(229, 24%, 87%);
+  margin-bottom: 15px;
+  cursor: pointer;
 }
 .add-on-option button h3 {
   color: hsl(213, 96%, 18%);
+  font-size: 1.1rem;
+}
+.button-content input {
+  padding: 10px;
 }
 .add-on-option button input {
+  margin-right: 10px;
 }
 .add-on-option {
 }
@@ -33,4 +41,11 @@
 }
 .add-ons-header {
   margin-right: auto;
+}
+.next-step-button-add-on {
+  position: absolute;
+  display: flex;
+  margin-top: 500px;
+  gap: 325px;
+  margin-left: 300px;
 }
