--- a/src/Pages/Personal.css
+++ b/src/Pages/Personal.css
@@ -58,3 +58,13 @@ p {
 .add-on-option button input {
   padding: 10px;
 }
+.next-page {
+  position: absolute;
+  margin-top: 100px;
+  margin-left: 350px;
+}
+.errors {
+  padding-top: 5px;
+  color: red;
+  font-weight: 500;
+}
